--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -65,6 +65,32 @@
 .span_1_of_12 {
   	width: 6.866%;
 }
+body {
+  color: #444444;
+}
+h1{
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  margin: 1em 1em 1em 1em;
+}
+h2{
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  margin: 1em 1em 1em 1em;
+}
+h3{
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 17px;
+  margin: 1em 1em 1em 1em;
+}
+body p {
+  font-family: Arial, sans-serif;
+  font-size: 17px;
+  margin: 1em 1em 1em 2em;
+}
 .banner {
   background-color: #03a3df;
   color: white;
@@ -100,6 +126,51 @@
 .navbar li:last-of-type:after {
   content: none;
 }
-.navlink{
-  color: black;
+.Schedule {
+  border: solid #ecb722 3px;
+}
+footer {
+  background-image: url("../images/footerImage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+    clear: both;
+    margin-bottom: 0;
+    position: relative;
+    text-align: left;
+    padding: 4em;
+    color: white;
+  }
+}
+.navbar-foot {
+  list-style: none;
+  float: left;
+  display: inline-block;
+  padding-left: 1em;
+  padding-bottom: 0;
+}
+.navbar-foot li {
+  display: inline-block;
+  padding: 1em;
+  position: relative;
+}
+.navbar-foot li:after {
+  content: "/";
+  width: 2px;
+  height: 1em;
+  position: absolute;
+  right: 0;
+  top: 1em;
+  bottom: 0;
+}
+.navbar-foot li:last-of-type:after {
+  content: none;
+}
+.foottext{
+
+}
+footer p {
+  padding-left: 1.5em;
+}
+footer img {
+  padding-left: 4em;
 }
