--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -72,24 +72,24 @@ body {
 h1{
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 200%;
   margin: 1em 1em 1em 1em;
 }
 h2{
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 150%;
   margin: 1em 1em 1em 1em;
 }
 h3{
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 17px;
+  font-size: 100%;
   margin: 1em 1em 1em 1em;
 }
 body p {
   font-family: Arial, sans-serif;
-  font-size: 17px;
+  font-size: 100%;
   margin: 1em 1em 1em 2em;
 }
 .banner {
@@ -104,7 +104,7 @@ body p {
   list-style: none;
   float: right;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 110%;
   display: inline-block;
   padding-left: 7.5em;
   padding-bottom: 0;
@@ -183,4 +183,17 @@ footer {
 }
 .link:visited{
   color: #ecb722;
+}
+.hidden {
+  position: relative;
+  left: -100000px;
+  top: auto;
+  font-size: 20%
+  color:red;
+}
+.hidden:focus {
+  left: 0;
+}
+a {
+  padding: 1em;
 }
