fixed errors found by validator

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -188,7 +188,7 @@ footer {
   position: relative;
   left: -100000px;
   top: auto;
-  font-size: 20%
+  font-size: 80%;
   color:red;
 }
 .hidden:focus {
